fix(themes): Increase darkness + submenu contrast fix

--- a/src/scss/_nav-lists.scss
+++ b/src/scss/_nav-lists.scss
@@ -9,7 +9,6 @@ gt-settings {
 
 .sub-items {
   .mdc-list-item__primary-text {
-    color: mat.get-color-from-palette(mat.$gray-palette, 600);
     word-wrap: normal;
     white-space: normal;
   }
